[gd_scene load_steps=11 format=2]

[ext_resource path="res://ui/Toolbar/MainToolbar.gd" type="Script" id=1]
[ext_resource path="res://ui/Toolbar/tool_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/icons/32px/icon_folder.png" type="Texture" id=3]
[ext_resource path="res://assets/icons/32px/icon_save.png" type="Texture" id=4]
[ext_resource path="res://assets/icons/32px/icon_add_sprites.png" type="Texture" id=5]
[ext_resource path="res://assets/icons/32px/icon_remove_sprites.png" type="Texture" id=6]
[ext_resource path="res://assets/icons/32px/icon_smartfolder.png" type="Texture" id=7]
[ext_resource path="res://assets/icons/32px/icon_sprites_settings.png" type="Texture" id=8]
[ext_resource path="res://assets/icons/32px/icon_sprites_preview.png" type="Texture" id=9]
[ext_resource path="res://assets/icons/32px/icon_publish_sprites_sheet.png" type="Texture" id=10]

[node name="MainToolbar" type="HBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 65.0
rect_min_size = Vector2( 0, 65 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]

[node name="new_project" parent="." index="0" instance=ExtResource( 2 )]

margin_right = 100.0
margin_bottom = 65.0
rect_min_size = Vector2( 100, 65 )
rect_clip_content = false
label = "New project"

[node name="open_project" parent="." index="1" instance=ExtResource( 2 )]

margin_left = 104.0
margin_right = 204.0
margin_bottom = 65.0
rect_min_size = Vector2( 100, 65 )
rect_clip_content = false
label = "Open project"
icon_texture = ExtResource( 3 )

[node name="save_project" parent="." index="2" instance=ExtResource( 2 )]

margin_left = 208.0
margin_right = 308.0
margin_bottom = 65.0
rect_min_size = Vector2( 100, 65 )
rect_clip_content = false
label = "Save project"
icon_texture = ExtResource( 4 )

[node name="separator" type="Control" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 312.0
margin_right = 332.0
margin_bottom = 65.0
rect_min_size = Vector2( 20, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="add_sprites" parent="." index="4" instance=ExtResource( 2 )]

margin_left = 336.0
margin_right = 436.0
margin_bottom = 65.0
rect_min_size = Vector2( 100, 65 )
rect_clip_content = false
label = "Add sprites"
icon_texture = ExtResource( 5 )

[node name="remove_sprites" parent="." index="5" instance=ExtResource( 2 )]

margin_left = 440.0
margin_right = 549.0
margin_bottom = 65.0
rect_min_size = Vector2( 109, 65 )
rect_clip_content = false
label = "Remove sprites"
icon_texture = ExtResource( 6 )

[node name="add_smart_folder" parent="." index="6" instance=ExtResource( 2 )]

visible = false
margin_left = 553.0
margin_right = 793.0
margin_bottom = 65.0
rect_min_size = Vector2( 240, 65 )
rect_clip_content = false
label = "Add smart folder"
icon_texture = ExtResource( 7 )

[node name="separator2" type="Control" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 553.0
margin_right = 573.0
margin_bottom = 65.0
rect_min_size = Vector2( 20, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="sprite_settings" parent="." index="8" instance=ExtResource( 2 )]

visible = false
margin_left = 577.0
margin_right = 817.0
margin_bottom = 65.0
rect_min_size = Vector2( 240, 65 )
rect_clip_content = false
label = "Sprite settings"
icon_texture = ExtResource( 8 )

[node name="anim_preview" parent="." index="9" instance=ExtResource( 2 )]

visible = false
margin_left = 577.0
margin_right = 817.0
margin_bottom = 65.0
rect_min_size = Vector2( 240, 65 )
rect_clip_content = false
label = "Anim preview"
icon_texture = ExtResource( 9 )

[node name="publish_sprite_sheet" parent="." index="10" instance=ExtResource( 2 )]

margin_left = 577.0
margin_right = 713.0
margin_bottom = 65.0
rect_min_size = Vector2( 136, 65 )
rect_clip_content = false
label = "Publish sprite sheet"
icon_texture = ExtResource( 10 )

[connection signal="pressed" from="new_project" to="." method="_on_new_project_pressed"]

[connection signal="pressed" from="open_project" to="." method="_on_open_project_pressed"]

[connection signal="pressed" from="save_project" to="." method="_on_save_project_pressed"]

[connection signal="pressed" from="add_sprites" to="." method="_on_add_sprites_pressed"]

[connection signal="pressed" from="remove_sprites" to="." method="_on_remove_sprites_pressed"]

[connection signal="pressed" from="add_smart_folder" to="." method="_on_add_smart_folder_pressed"]

[connection signal="pressed" from="sprite_settings" to="." method="_on_sprite_settings_pressed"]

[connection signal="pressed" from="anim_preview" to="." method="_on_anim_preview_pressed"]

[connection signal="pressed" from="publish_sprite_sheet" to="." method="_on_publish_sprite_sheet_pressed"]


